--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </header>
 <div class="backmusic">
     <audio controls autoplay loop>
-        <source src="music/AWNW.mp3" type="audio/mpeg">
+        <source href="music/AWNW.mp3" type="audio/mpeg">
         
     </audio>
 </div>
