--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marlina & Hans</title>
     <meta property="og:title" content="Marlina & Hans"/>
-    <meta property="og:image" content="https://ia.media-imdb.com/images/rock.jpg" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/HobiIndustri/MarlinaHans/master/img/thumbfront.png" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" />
